<resources>
    <string name="app_name">SmartUsageTracker</string>
    <string name="daily_stats">Today</string>
    <string name="yesterday_stats">Yesterday</string>
    <string name="weekly_stats">Week</string>
    <string name="monthly_stats">Month</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="info">Info</string>
    <string name="steps">Steps to use this app</string>
    <string name="step_1">Click on [img src=ic_action_settings/]
        icon to navigate to the "Settings" screen, select the list of
        apps whose usage time has to be tracked by enabling them.</string>
    <string name="step_2">Click on [img src=ic_action_refresh/]
        icon to refresh the selected applications and its usage time</string>
    <string name="step_3">Find Daily usage in minutes,
        Weekly and Monthly usage in hours by clicking on the respective tabs</string>
    <string name="step_4">Pinch to zoom in and zoom out the bar chart,
        to get a clear look</string>
    <string name="step_5">Scroll horizontally to
        view the usage time for all the apps selected</string>
    <string name="no_data">Select apps from Settings screen to view its usage info</string>
    <!--<string name="adUnitId">ca-app-pub-3940256099942544/6300978111</string>  &lt;!&ndash;// //add test&ndash;&gt;-->
    <string name="adUnitId">ca-app-pub-3912594581926590/5234837081</string>

    <string name="app">App</string>
    <string name="network">Network</string>
    <string name="network_stats">Network Stats</string>
    <string name="networks_stats_na">Sorry. This feature is not available for you Android Version.</string>


    <string name="welcome_text">Welcome to Smart Usage Tracker!</string>
    <string name="btn_create_an_account">Create an account</string>
    <string name="btn_already_have_an_account">Already have an account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="login">Login</string>
</resources>
